Fix scrollbar to show only when needed

--- a/client/src/components/TaskDurationBarChart/TaskDurationBarChart.module.css
+++ b/client/src/components/TaskDurationBarChart/TaskDurationBarChart.module.css
@@ -1,10 +1,4 @@
 .scrollableTaskChart {
   overflow: hidden;
-  overflow-x: scroll;
-}
-
-/* works in chrome and safari */
-.scrollableTaskChart::-webkit-scrollbar {
-  width: 0px !important;
-  display: none;
+  overflow-x: auto;
 }
